--- a/components/Footer/footer.module.css
+++ b/components/Footer/footer.module.css
@@ -7,3 +7,10 @@
   color: rgba(255, 255, 255, 0.852);
   /* border-top: 1px solid #808dad49; */
 }
+
+@media only screen and (max-width:768px){
+  .footer_creator h6 {
+    font-weight: 200;
+    text-align: center !important;
+  }
+}
