--- a/components/Header/header.module.css
+++ b/components/Header/header.module.css
@@ -73,3 +73,60 @@
   box-shadow: 5px 5px 15px -5px #01d293 !important;
   z-index: 9999;
 }
+
+.mobile_menu {
+  display: none;
+}
+
+.mobile_menu i {
+  font-size: 1.3rem;
+  color: #fff;
+  cursor: pointer;
+}
+
+/*  responsive */
+@media only screen and (max-width:992px){
+  .navigation {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #171f3897;
+    z-index: 99999;
+    display: none;
+  }
+
+  .nav_menu {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 300px;
+    height: 100%;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .nav_right {
+    display: none;
+  }
+
+  .mobile_menu {
+    display: block !important;
+  }
+
+  .menu_active {
+    display: block !important;
+  }
+
+  .logo h1 {
+    font-size: 1.3rem !important;
+  }
+}
+
+@media only screen and (max-width:768px){
+  .header {
+    height: 60px;
+    line-height: 60px;
+  }
+}
