--- a/styles/about.module.css
+++ b/styles/about.module.css
@@ -17,3 +17,19 @@
 .about_image_box {
   width: 250px !important;
 }
+
+@media only screen and (max-width:992px){
+  .about_image_gallery {
+   justify-content: center !important; 
+   margin-top: 50px;
+  }
+  .about_content h3{
+    font-size: 1.3rem;
+  }
+}
+
+@media only screen and (max-width:768x) {
+  .about_image_box {
+    width: 150px !important;
+  }
+}
