--- a/styles/services.module.css
+++ b/styles/services.module.css
@@ -3,3 +3,13 @@
   align-items: center;
   column-gap: 2rem;
 }
+
+@media only screen and (max-width:992px) {
+  .services_container {
+    flex-direction: column;
+    align-items: unset;
+  }
+  .service_title h3 {
+    font-size: 1.3rem;
+  }
+}
